Started practical part

--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -16,6 +16,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# <center>Część teoretyczna</center>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Cel i wstępna analiza problemu\n",
     "<p style='text-align: justify;'>\n",
     "Jako cel obraliśmy sobie stworzenie maszynowego odpowiednika człowieka grającego w grę \n",
@@ -179,7 +188,7 @@
     "Kod projektu napisaliśmy w języku Python w wersji 3.6. Sieć neuronowa oraz wszelkie struktury i metody\n",
     "z nią  związane pochodzą z wysokopoziomowego API Kerasa bazującego na bibliotece TensorFlow. Jeśli zaś \n",
     "chodzi o samo środowisko do trenowania agenta, wykorzystaliśmy zestaw narzędzi AI Gym, a dokładniej\n",
-    "środowisko gry Cart Pole. Ponadto aby maksymalnie wykorzystać możliwości sprzętowe zdecydowaliśmy, że \n",
+    "grę Cart Pole. Ponadto, aby maksymalnie wykorzystać możliwości sprzętowe zdecydowaliśmy, że \n",
     "części kodu wymagające wykonywania sekwencyjnego będą uruchamiane z użyciem procesora, a fragmenty \n",
     "możliwe do zrównoleglenia obsłuży karta graficzna. \n",
     "</p>\n"
@@ -196,9 +205,10 @@
     "Pierwszą wersję modelu stworzyliśmy z myślą o uniwersalności. Zasadniczo była ona zdolna do współpracy z \n",
     "większością środowisk dostępnych poprzez interfejs AI Gym. Dzięki temu zabiegowi byliśmy w stanie przeprowadzić \n",
     "serię prób pozwalających na wyłonienie najlepszego kandydata do dalszego ulepszania modelu. Testy zaczęliśmy od \n",
-    "bardziej złożonych środowisk (BipedalWalker-v2) poprzez te średnio skomplikowane (LunarLander-v2) aż po \n",
-    "najłatwiejsze (CartPole-v1). Niestety okazało się, że nasz sprzęt nie jest w stanie wytrenowaćsieci neuronowej \n",
-    "dla żadnego z zaawansowanych środowisk w akceptowalnych ramach czasowych.\n",
+    "bardziej złożonych środowisk (BipedalWalker-v2 - kombinacje 8 różnych możliwych do podjęcia akcji) poprzez te średnio \n",
+    "skomplikowane (LunarLander-v2 - możliwe do wykonania 4 akce) aż po najłatwiejsze (CartPole-v1 - tylko 2 możliwe akcje). \n",
+    "Niestety okazało się, że nasz sprzęt nie jest w stanie wytrenować sieci neuronowej dla najtrudniejszego \n",
+    "środowiska w racjonalnych ramach czasowych, więc postanowiliśmy skupić się na grze o średniej truności - Lunar Lander.\n",
     "</p>\n"
    ],
    "metadata": {
@@ -210,11 +220,10 @@
    "source": [
     "<p style='text-align: justify;'>\n",
     "Mówiąc konkretniej, trenowanie naszego modelu do stopnia, w którym jego wyniki są powtarzalne i pozwalają na \n",
-    "wyciąganie sensownych wniosków, zajmuje około 10 minut w najprostszym środowisku (CartPole). Natomiast w drugim \n",
-    "co do złożoności LunarLander czas ten jest niemal pięciokrotnie większy. Idąc dalej, po oszacowaniu, że do \n",
-    "zakończenia projektu będziemy musieli trenować model w różnych konfiguracjach blisko 100 razy, liczba 75 godzin \n",
-    "spędzonych na samym oczekiwaniu na wytrenowanie się sieci neuronowej dla LunarLandera byłaby zbyt duża. \n",
-    "Na tej podstawie zdecydowaliśmy, że najlepszym rozwiązaniem będzie wykorzystanie środowiska Cart Pole.\n",
+    "wyciąganie sensownych wniosków, zajmuje około 5 minut w najprostszym środowisku (CartPole), w drugim \n",
+    "co do złożoności LunarLander czas ten jest około 3 krotnie większy, natomiast w BipedalWalker jest aż 10 krotnie większy. \n",
+    "Idąc dalej, po oszacowaniu, że do zakończenia projektu będziemy musieli trenować model w różnych konfiguracjach blisko \n",
+    "100 razy, najtrudniejszym środowiskiem na jakie mogliśmy sobie pozwolić był Lunar Lander.\n",
     "</p>\n"
    ],
    "metadata": {
@@ -224,8 +233,34 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Trenowanie i implementacja\n",
-    "### Preludium\n",
+    "## Opis środowiska LunarLander-v2\n",
+    "<p style='text-align: justify;'>\n",
+    "Lądowisko ma zawsze współrzędne (0,0). Współrzędne to dwie pierwsze liczby w wektorze stanu. Nagroda za \n",
+    "przebycie drogi od góry ekranu aż do lądowiska i osiągnięcia zerowej prędkości wynosi około 100-140 punktów. \n",
+    "Gra kończy się w momencie, gdy lądownik rozbija się lub ląduje, otrzymując dodatkowe -100 lub +100 punktów. Każda noga,\n",
+    "która styka się z ziemią to dodatkowe +10 punktów. Uruchamianie głównego silinika to -0.3 punkta na klatkę. Skuteczne \n",
+    "lądowanie to 200 punktów. Lądowanie poza lądowiskiem jest możliwe. Paliwo jest nieskończone, więc agent może najpierw \n",
+    "nauczyć się latać,a potem wylądować za pierwszym razem. Możliwe do wykonania 4 dyskretne akcje: nie rób nic, uruchom \n",
+    "lewy silnik, uruchom główny silnik, uruchom prawy silnik przyjmujące kolejno wartości 0, 1, 2 oraz 3.\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# <center>Część praktyczna</center>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Preludium\n",
     "<p style='text-align: justify;'>\n",
     "W poniższych podrozdziałach zawarliśmy przegląd wszystkich wykonanych przez nas modeli. Prezentowane są one w \n",
     "sposób chronologiczny względem ich powstania. Prezentacji podlega zarówno kod źródłowy modelu jak i wyniki przez niego \n",
@@ -240,7 +275,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Naiwny agent losowy\n"
+    "***\n"
    ],
    "metadata": {
     "collapsed": false
@@ -249,14 +284,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Importowanie niezbędnych bibliotek\n",
-    "<p style='text-align: justify;'>\n",
-    "Do zaimplementowania tego agenta posłużyły nam trzy biblioteki:\n",
-    "</p>\n",
-    "\n",
-    "- random - jak sama nazwa wskazuje, odpowiedzialna jest za generowanie losowych wartości\n",
-    "- gym - autorstwa Open AI, udostępnia interfejs do korzystania z środowiska Cart Pole\n",
-    "- tensorflow - w tym wypadku służy jedynie do określenia, na jakim podzespole (GPU czy CPU) będzie wykonywany kod \n"
+    "## Naiwny agent losowy\n",
+    "Pierwszy zaimplementowany przez nas agent podejmuje decyzje odnośnie wykonywanych akcji w sposób losowy. Stanowi \n",
+    "swego rodzaju obiekt porównawczy dla późniejszych modeli.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Importowanie niezbędnych bibliotek"
    ],
    "metadata": {
     "collapsed": false
@@ -268,8 +307,7 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "import gym\n",
-    "import tensorflow as tf\n"
+    "import gym     # Pełni rolę interfejsu dla środowiska LunarLander"
    ],
    "metadata": {
     "collapsed": false,
@@ -282,16 +320,107 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Przypisanie wartości stałym\n",
-    "<p style='text-align: justify;'>\n",
-    "W każdym modelu będziemy potrzebować pewnej ilości stałych, określających warunki, w których przeprowadzane będzie \n",
-    "trenowanie oraz testy. \n",
-    "</p>\n",
     "\n",
-    "- NUM_OF_EPISODES - liczba gier rozegranych podczas szkolenia jednego modelu.\n",
-    "- FRAMES_PER_EPISODE - maksymalna liczba klatek równa liczbie akcji, które podejmuje agent.\n",
-    "- GAME_ID - nazwa środowiska, w którym będzie operował agent.\n",
-    "- NUM_OF_MODELS - liczba modeli wytrenowanych od podstaw.\n"
+    "### Konfiguracja\n",
+    "<p style='text-align: justify;'>\n",
+    "Najpierw definiujemy stałe, określające na jakich zasadach oraz ilu agentów będziemy trenować:\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "NUM_OF_AGENTS = 4          # liczba agentów którzy będą wytrenowani od podstaw.\n",
+    "NUM_OF_EPISODES = 100      # liczba gier rozegranych przez  jednego agenta.\n",
+    "FRAMES_PER_EPISODE = 1000  # liczba klatek równa liczbie akcji do podjęcia przez agenta w każdej grze\n",
+    "GAME_ID = \"LunarLander-v2\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "### Inicjalizacja środowiska"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "game = gym.make(GAME_ID)             # Tworzymy instancję określonej wcześniej gry\n",
+    "num_of_actions = game.action_space.n # wyłuskujemy ilość akcji, które agent ma do wyboru\n",
+    "is_done = False\n",
+    "avgs = []"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "### Trenowanie agentów\n",
+    "Do wytrenowania agenta potrzebujemy dwóch metod z interfejsu <b>gym</b> operujących na grze:\n",
+    "1. <b>reset()</b> - inicjalizuje nową grę oraz zwraca stan początkowy agenta\n",
+    "2. <b>step(action)</b> - wykonuje akcję podaną jako argument, zwraca kolejno: nowy stan, zdobytą nagrodę, flagę wskazującą \n",
+    "czy gra się zakończyła oraz obiekt zawierający informacje dla programisty (debug info).\n",
+    "\n",
+    "Sama implementacja wygląda więc następująco:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for model in range(NUM_OF_AGENTS): \n",
+    "    scores = []\n",
+    "    for episode in range(NUM_OF_EPISODES):\n",
+    "        current_state = game.reset()\n",
+    "        for frame in range(FRAMES_PER_EPISODE):\n",
+    "            # game.render()\n",
+    "            action = random.randrange(num_of_actions)\n",
+    "            new_state, gained_reward, is_done, info = game.step(action) \n",
+    "            if is_done:\n",
+    "                scores.append(frame)\n",
+    "                break\n",
+    "    avgs.append(sum(scores)/len(scores)) # zapamiętujemy średni wynik osiągniety przez agenta\n",
+    "game.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "### Wyświetlenie wyników"
    ],
    "metadata": {
     "collapsed": false
@@ -305,49 +434,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found solution at [-0.46316012] with value [-0.7399067]\n"
+      "Model 0 has avarage: 89.01\n",
+      "Model 1 has avarage: 97.79\n",
+      "Model 2 has avarage: 94.47\n",
+      "Model 3 has avarage: 90.97\n",
+      "Overall avg: 93.06\n"
      ]
     }
    ],
    "source": [
-    "NUM_OF_EPISODES = 100\n",
-    "FRAMES_PER_EPISODE = 1000\n",
-    "GAME_ID = \"CartPole-v1\"\n",
-    "CPU_ID = \"/device:CPU:0\"\n",
-    "NUM_OF_MODELS = 4"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "with tf.device(CPU_ID):\n",
-    "    game = gym.make(GAME_ID)\n",
-    "    num_of_actions = game.action_space.n\n",
-    "    is_done = False\n",
-    "    avgs = []\n",
-    "    for model in range(NUM_OF_MODELS):\n",
-    "        scores = []\n",
-    "        for episode in range(NUM_OF_EPISODES):\n",
-    "            current_state = game.reset()\n",
-    "            for frame in range(FRAMES_PER_EPISODE):\n",
-    "                game.render()\n",
-    "                action = random.randrange(num_of_actions)\n",
-    "                new_state, gained_reward, is_done, info = game.step(action)\n",
-    "                if is_done:\n",
-    "                    scores.append(frame)\n",
-    "                    break\n",
-    "        avgs.append(sum(scores)/len(scores))\n",
-    "    for i, avg in enumerate(avgs):\n",
-    "        print(\"Model {} has avarage: {}\".format(i, avg))\n",
-    "    print(\"Overall avg for all models: {}\".format(sum(avgs)/len(avgs)))"
+    "for i, avg in enumerate(avgs): # Wyświetlamy wyniki poszczególnych agentów\n",
+    "    print(\"Model {} has avarage: {}\".format(i, avg))\n",
+    "print(\"Overall avg: {}\".format(sum(avgs)/len(avgs)))"
    ],
    "metadata": {
     "collapsed": false,
@@ -359,6 +457,19 @@
   {
    "cell_type": "markdown",
    "source": [
+    "\n",
+    "### Wnioski\n",
+    "Zgodnie z przewidywaniami działania agenta były losowe, co prowadziło do osiągnięcia słabych rezultatów.\n",
+    "Poniżej można zobaczyć krótkie nagranie z agentem w akcji:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<center><img src=\"https://media.giphy.com/media/jUujItyYyVsMRHulK2/giphy.gif\" width=\"460\" height=\"280\" /></center>\n",
     "### Header"
    ],
    "metadata": {
