Done naive, started simple

--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -236,7 +236,7 @@
     "## Opis środowiska LunarLander-v2\n",
     "<p style='text-align: justify;'>\n",
     "Lądowisko ma zawsze współrzędne (0,0). Współrzędne to dwie pierwsze liczby w wektorze stanu. Nagroda za \n",
-    "przebycie drogi od góry ekranu aż do lądowiska i osiągnięcia zerowej prędkości wynosi około 100-140 punktów. \n",
+    "przebycie drogi od góry ekranu aż do lądowiska i bez użycia silników to około 100-140 punktów. \n",
     "Gra kończy się w momencie, gdy lądownik rozbija się lub ląduje, otrzymując dodatkowe -100 lub +100 punktów. Każda noga,\n",
     "która styka się z ziemią to dodatkowe +10 punktów. Uruchamianie głównego silinika to -0.3 punkta na klatkę. Skuteczne \n",
     "lądowanie to 200 punktów. Lądowanie poza lądowiskiem jest możliwe. Paliwo jest nieskończone, więc agent może najpierw \n",
@@ -251,15 +251,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# <center>Część praktyczna</center>\n"
+    "***\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
+    "# <center>Część praktyczna</center>\n",
     "## Preludium\n",
     "<p style='text-align: justify;'>\n",
     "W poniższych podrozdziałach zawarliśmy przegląd wszystkich wykonanych przez nas modeli. Prezentowane są one w \n",
@@ -267,15 +271,6 @@
     "osiągane. Pozwoliliśmy sobie pominąć komentowanie oczywistych i trywialnych fragmentów kodu, aby nie zaciemniać tego, \n",
     "co najważniejsze, czyli rezultatów i wniosków z tworzenia coraz to lepszych modeli.\n",
     "</p>\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "***\n"
    ],
    "metadata": {
     "collapsed": false
@@ -303,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import random\n",
@@ -332,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4          # liczba agentów którzy będą wytrenowani od podstaw.\n",
@@ -359,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "game = gym.make(GAME_ID)             # Tworzymy instancję określonej wcześniej gry\n",
@@ -392,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "for model in range(NUM_OF_AGENTS): \n",
@@ -404,7 +399,7 @@
     "            action = random.randrange(num_of_actions)\n",
     "            new_state, gained_reward, is_done, info = game.step(action) \n",
     "            if is_done:\n",
-    "                scores.append(frame)\n",
+    "                scores.append(frame) # zapamiętujemy wynik po zakończeniu gry\n",
     "                break\n",
     "    avgs.append(sum(scores)/len(scores)) # zapamiętujemy średni wynik osiągniety przez agenta\n",
     "game.close()"
@@ -428,17 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 0 has avarage: 89.01\n",
-      "Model 1 has avarage: 97.79\n",
-      "Model 2 has avarage: 94.47\n",
-      "Model 3 has avarage: 90.97\n",
-      "Overall avg: 93.06\n"
+      "Model 0 has avarage: -43.51177257637014\n",
+	  "Model 1 has avarage: -37.65263149030239\n",
+	  "Model 2 has avarage: -48.572572568606176\n",
+	  "Model 3 has avarage: -47.90503956072182\n",
+	  "Overall avg: -44.41050404900014\n"
      ]
     }
    ],
@@ -460,7 +455,7 @@
     "\n",
     "### Wnioski\n",
     "Zgodnie z przewidywaniami działania agenta były losowe, co prowadziło do osiągnięcia słabych rezultatów.\n",
-    "Poniżej można zobaczyć krótkie nagranie z agentem w akcji:"
+    "Poniżej można zobaczyć krótkie nagranie z agentem w akcji:\n"
    ],
    "metadata": {
     "collapsed": false
@@ -469,11 +464,113 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<center><img src=\"https://media.giphy.com/media/jUujItyYyVsMRHulK2/giphy.gif\" width=\"460\" height=\"280\" /></center>\n",
-    "### Header"
+    "<center><img src=\"https://media.giphy.com/media/jUujItyYyVsMRHulK2/giphy.gif\" width=\"460\" height=\"280\" /></center>\n"
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Prosty agent DQN\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import gym\n",
+    "import numpy as np\n",
+    "from collections import deque\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.optimizers import SGD\n",
+    "import tensorflow as tf"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class SimpleDqnNpc:\n",
+    "    \"Klasa implementująca agenta DQN opartego o prostą sieć neuronową\"\n",
+    "\n",
+    "    def __init__(self, num_of_inputs, num_of_outputs):\n",
+    "        \"\"\"\n",
+    "        num_of_inputs - długość wektora będącego wejściem dla sieci neuronowej\n",
+    "        num_of_outputs - ilość wyjść z sieci neuronowej\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self._num_of_inputs = num_of_inputs\n",
+    "        self._num_of_outputs = num_of_outputs\n",
+    "        self.memory = deque(maxlen=1024)\n",
+    "        self._init_model()\n",
+    "\n",
+    "    def _init_model(self):\n",
+    "        \"\"\"Inicjalizuje model sieci neuronowej\"\"\"\n",
+    "\n",
+    "        self._model = Sequential()\n",
+    "        self._model.add(Dense(16, input_dim=self._num_of_inputs, activation='linear'))\n",
+    "        self._model.add(Dense(16, activation='linear'))\n",
+    "        self._model.add(Dense(self._num_of_outputs, activation='linear'))\n",
+    "        self._model.compile(optimizer=SGD(), loss='mean_squared_error')\n",
+    "\n",
+    "    def act(self, state):\n",
+    "        \"\"\"Przewiduje i zwraca akcję, którą należy wykonać\"\"\"\n",
+    "\n",
+    "        act_profits = self._model.predict(state)\n",
+    "        return np.argmax(act_profits[0])\n",
+    "\n",
+    "    def retain(self, current_state, taken_action, gained_reward, future_state, is_lost):\n",
+    "        \"\"\"Zapisuje dyn przypadku w pamięci agenta\"\"\"\n",
+    "\n",
+    "        self.memory.append((current_state, taken_action, gained_reward, future_state, is_lost))\n",
+    "\n",
+    "    def replay(self, batch_size):\n",
+    "        \"\"\"\n",
+    "        Doszkala sieć neuronową na losowym fragmencie z jego pamięci\n",
+    "        batch-size - rozmiar fragmentu pamięci\n",
+    "        \"\"\"\n",
+    "\n",
+    "        batch = random.sample(self.memory, batch_size)\n",
+    "        for current_state, taken_action, gained_reward, future_state, is_lost in batch:\n",
+    "            future_act_best_profit = gained_reward\n",
+    "            if not is_lost:\n",
+    "                future_act_profits = self._model.predict(future_state)\n",
+    "                future_act_best_profit = np.amax(future_act_profits[0])\n",
+    "            current_act_profits = self._model.predict(current_state)\n",
+    "            current_act_profits[0][taken_action] = future_act_best_profit\n",
+    "            with tf.device('/device:GPU:0'):\n",
+    "                self._model.fit(x=current_state, y=current_act_profits, epochs=1, verbose=0)\n",
+    "\n",
+    "    def load(self, model_path):\n",
+    "        \"\"\"Wczytuje model z pamięci\"\"\"\n",
+    "\n",
+    "        self._model.load_weights(model_path)\n",
+    "\n",
+    "    def save(self, model_path):\n",
+    "        \"\"\"Zapisuje modele do pamięci\"\"\"\n",
+    "\n",
+    "        self._model.save_weights(model_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -497,23 +594,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Header"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import numpy"
+    "##### Header\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
