--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -266,11 +266,15 @@
     "# <center>Część praktyczna</center>\n",
     "## Preludium\n",
     "<p style='text-align: justify;'>\n",
-    "W poniższych podrozdziałach zawarliśmy przegląd wszystkich wykonanych przez nas modeli. Prezentowane są one w \n",
-    "sposób chronologiczny względem ich powstania. Prezentacji podlega zarówno kod źródłowy modelu jak i wyniki przez niego \n",
-    "osiągane. Pozwoliliśmy sobie pominąć komentowanie oczywistych i trywialnych fragmentów kodu, aby nie zaciemniać tego, \n",
-    "co najważniejsze, czyli rezultatów i wniosków z tworzenia coraz to lepszych modeli.\n",
-    "</p>\n"
+    "W poniższych podrozdziałach zawarliśmy przegląd wszystkich wykonanych przez nas modeli. Przedstawione są one w \n",
+    "sposób chronologiczny względem ich powstania. Prezentacji podlega zarówno kod źródłowy jak i osiągane wyniki. \n",
+    "Pondaty pozwoliliśmy sobie pominąć komentowanie oczywistych części kodu, aby nie zaciemniać tego, \n",
+    "co najważniejsze, czyli rezultatów i wniosków z tworzenia kolejnych modeli. Natomiast jeśli chodzi o fragmenty,\n",
+    "które uznaliśmy za ważne, to są one opisane bezpośrednio w kodzie lub w kolejnym akapicie pod nim.\n",
+    "</p>\n",
+    "\n",
+    "***\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -279,18 +283,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Naiwny agent losowy\n",
-    "Pierwszy zaimplementowany przez nas agent podejmuje decyzje odnośnie wykonywanych akcji w sposób losowy. Stanowi \n",
-    "swego rodzaju obiekt porównawczy dla późniejszych modeli.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Importowanie niezbędnych bibliotek"
+    "## <b>Naiwny agent losowy</b>\n",
+    "Pierwszy zaimplementowany przez nas agent podejmuje decyzje o tym, jaką akcę wykonać, w sposób losowy. Stanowi \n",
+    "swego rodzaju obiekt porównawczy dla późniejszych modeli. Jego implementacja wygląda następująco:\n"
    ],
    "metadata": {
     "collapsed": false
@@ -313,21 +308,8 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "\n",
-    "### Konfiguracja\n",
-    "<p style='text-align: justify;'>\n",
-    "Najpierw definiujemy stałe, określające na jakich zasadach oraz ilu agentów będziemy trenować:\n",
-    "</p>\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4          # liczba agentów którzy będą wytrenowani od podstaw.\n",
@@ -338,18 +320,9 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "\n",
-    "### Inicjalizacja środowiska"
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
@@ -360,47 +333,20 @@
     "game = gym.make(GAME_ID)             # Tworzymy instancję określonej wcześniej gry\n",
     "num_of_actions = game.action_space.n # wyłuskujemy ilość akcji, które agent ma do wyboru\n",
     "is_done = False\n",
-    "avgs = []"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "\n",
-    "### Trenowanie agentów\n",
-    "Do wytrenowania agenta potrzebujemy dwóch metod z interfejsu <b>gym</b> operujących na grze:\n",
-    "1. <b>reset()</b> - inicjalizuje nową grę oraz zwraca stan początkowy agenta\n",
-    "2. <b>step(action)</b> - wykonuje akcję podaną jako argument, zwraca kolejno: nowy stan, zdobytą nagrodę, flagę wskazującą \n",
-    "czy gra się zakończyła oraz obiekt zawierający informacje dla programisty (debug info).\n",
-    "\n",
-    "Sama implementacja wygląda więc następująco:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
+    "avgs = []\n",
     "for model in range(NUM_OF_AGENTS): \n",
     "    scores = []\n",
     "    for episode in range(NUM_OF_EPISODES):\n",
     "        current_state = game.reset()\n",
+    "        total_score = 0\n",
     "        for frame in range(FRAMES_PER_EPISODE):\n",
     "            # game.render()\n",
-    "            action = random.randrange(num_of_actions)\n",
+    "            action = random.randrange(num_of_actions) # wybór losowej akcji z zakresu możliwych\n",
     "            new_state, gained_reward, is_done, info = game.step(action) \n",
+    "            total_score += gained_reward\n",
     "            if is_done:\n",
-    "                scores.append(frame) # zapamiętujemy wynik po zakończeniu gry\n",
     "                break\n",
+    "        scores.append(total_score)             # zapamiętujemy wynik po zakończeniu gry\n",
     "    avgs.append(sum(scores)/len(scores)) # zapamiętujemy średni wynik osiągniety przez agenta\n",
     "game.close()"
    ],
@@ -414,8 +360,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "\n",
-    "### Wyświetlenie wyników"
+    "> Do wytrenowania agenta potrzebujemy dwóch metod z interfejsu <b>gym</b> operujących na grze:\n",
+    "1. <b>reset()</b> - inicjalizuje nową grę oraz zwraca stan początkowy agenta\n",
+    "2. <b>step(action)</b> - wykonuje akcję podaną jako argument, zwraca kolejno: nowy stan, zdobytą nagrodę, flagę wskazującą \n",
+    "czy gra się zakończyła oraz obiekt zawierający informacje dla programisty (debug info)."
    ],
    "metadata": {
     "collapsed": false
@@ -430,10 +378,10 @@
      "output_type": "stream",
      "text": [
       "Model 0 has avarage: -43.51177257637014\n",
-	  "Model 1 has avarage: -37.65263149030239\n",
-	  "Model 2 has avarage: -48.572572568606176\n",
-	  "Model 3 has avarage: -47.90503956072182\n",
-	  "Overall avg: -44.41050404900014\n"
+      "Model 1 has avarage: -37.65263149030239\n",
+      "Model 2 has avarage: -48.572572568606176\n",
+      "Model 3 has avarage: -47.90503956072182\n",
+      "Overall avg: -44.41050404900014\n"
      ]
     }
    ],
@@ -454,8 +402,10 @@
    "source": [
     "\n",
     "### Wnioski\n",
-    "Zgodnie z przewidywaniami działania agenta były losowe, co prowadziło do osiągnięcia słabych rezultatów.\n",
-    "Poniżej można zobaczyć krótkie nagranie z agentem w akcji:\n"
+    "<p style='text-align: justify;'>\n",
+    "Działania agenta były losowe, więc zgodnie z przewidywaniami osiągane przez niego wyniki były słabe. Poniżej można \n",
+    "zobaczyć krótkie nagranie przedstawiające sposób jego działania:\n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -464,7 +414,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<center><img src=\"https://media.giphy.com/media/jUujItyYyVsMRHulK2/giphy.gif\" width=\"460\" height=\"280\" /></center>\n"
+    "<center><img src=\"https://media.giphy.com/media/jUujItyYyVsMRHulK2/giphy.gif\" width=\"460\" height=\"280\" /></center>\n",
+    "\n",
+    "***\n"
    ],
    "metadata": {
     "collapsed": false
@@ -473,7 +425,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Prosty agent DQN\n"
+    "## Prosty agent DQN\n",
+    "<p style='text-align: justify;'>\n",
+    "Następnym krokiem było usprawnienie naiwnego agenta poprzez dodanie prostej sieci neuronowej oraz metod\n",
+    "odpowiedzialnych za jej trenowanie. \n",
+    "</p>"
    ],
    "metadata": {
     "collapsed": false
@@ -491,7 +447,7 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras.optimizers import SGD\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf # używamy go do określenia, który fragment kodu wykonuje się na GPU"
    ],
    "metadata": {
     "collapsed": false,
@@ -516,26 +472,33 @@
     "\n",
     "        self._num_of_inputs = num_of_inputs\n",
     "        self._num_of_outputs = num_of_outputs\n",
+    "        self._exploration_rate = 1.0           # Prawdopodobieństwo podjęcia losowej akcji\n",
+    "        self._exploration_rate_min = 0.1\n",
+    "        self._exploration_rate_decay = 0.997\n",
     "        self.memory = deque(maxlen=1024)\n",
     "        self._init_model()\n",
     "\n",
     "    def _init_model(self):\n",
-    "        \"\"\"Inicjalizuje model sieci neuronowej\"\"\"\n",
+    "        \"\"\"\n",
+    "        Inicjalizuje model sieci neuronowej.\n",
+    "        Wybraliśmy (w naszym mniemaniu) najproszte parametry i kształt.\n",
+    "        \"\"\"\n",
     "\n",
     "        self._model = Sequential()\n",
-    "        self._model.add(Dense(16, input_dim=self._num_of_inputs, activation='linear'))\n",
-    "        self._model.add(Dense(16, activation='linear'))\n",
+    "        self._model.add(Dense(self._num_of_inputs, input_dim=self._num_of_inputs, activation='linear'))\n",
     "        self._model.add(Dense(self._num_of_outputs, activation='linear'))\n",
     "        self._model.compile(optimizer=SGD(), loss='mean_squared_error')\n",
     "\n",
     "    def act(self, state):\n",
     "        \"\"\"Przewiduje i zwraca akcję, którą należy wykonać\"\"\"\n",
     "\n",
-    "        act_profits = self._model.predict(state)\n",
-    "        return np.argmax(act_profits[0])\n",
+    "        if np.random.rand() <= self._exploration_rate:\n",
+    "            return random.randrange(self._num_of_outputs)\n",
+    "        act_values = self._model.predict(state)\n",
+    "        return np.argmax(act_values[0])\n",
     "\n",
     "    def retain(self, current_state, taken_action, gained_reward, future_state, is_lost):\n",
-    "        \"\"\"Zapisuje dyn przypadku w pamięci agenta\"\"\"\n",
+    "        \"\"\"Zapisuje dany przypadek w pamięci agenta\"\"\"\n",
     "\n",
     "        self.memory.append((current_state, taken_action, gained_reward, future_state, is_lost))\n",
     "\n",
@@ -546,15 +509,19 @@
     "        \"\"\"\n",
     "\n",
     "        batch = random.sample(self.memory, batch_size)\n",
-    "        for current_state, taken_action, gained_reward, future_state, is_lost in batch:\n",
-    "            future_act_best_profit = gained_reward\n",
-    "            if not is_lost:\n",
+    "        for current_state, taken_action, gained_reward, future_state, is_done in batch:\n",
+    "            next_act_best_profit = gained_reward\n",
+    "            if not is_done:\n",
     "                future_act_profits = self._model.predict(future_state)\n",
-    "                future_act_best_profit = np.amax(future_act_profits[0])\n",
+    "                next_act_best_profit = np.amax(future_act_profits[0])\n",
     "            current_act_profits = self._model.predict(current_state)\n",
-    "            current_act_profits[0][taken_action] = future_act_best_profit\n",
+    "            current_act_profits[0][taken_action] = next_act_best_profit\n",
     "            with tf.device('/device:GPU:0'):\n",
     "                self._model.fit(x=current_state, y=current_act_profits, epochs=1, verbose=0)\n",
+    "        if self._exploration_rate > self._exploration_rate_min:\n",
+    "            self._exploration_rate *= self._exploration_rate_decay\n",
+    "        else:\n",
+    "            self._exploration_rate = 0.0\n",
     "\n",
     "    def load(self, model_path):\n",
     "        \"\"\"Wczytuje model z pamięci\"\"\"\n",
@@ -564,13 +531,138 @@
     "    def save(self, model_path):\n",
     "        \"\"\"Zapisuje modele do pamięci\"\"\"\n",
     "\n",
-    "        self._model.save_weights(model_path)"
+    "        self._model.save_weights(model_path)\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "NUM_OF_AGENTS = 4\n",
+    "NUM_OF_EPISODES = 200\n",
+    "FRAMES_PER_EPISODE = 1000\n",
+    "BATCH_SIZE = 16\n",
+    "GAME_ID = \"LunarLander-v2\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "game = gym.make(GAME_ID)\n",
+    "num_of_actions = game.action_space.n\n",
+    "observation_size = game.observation_space.shape[0]\n",
+    "npc = SimpleDqnNpc(observation_size, num_of_actions)\n",
+    "is_done = False\n",
+    "avgs = []"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for model in range(NUM_OF_AGENTS):\n",
+    "    scores = []\n",
+    "    for episode in range(NUM_OF_EPISODES):\n",
+    "        total_score = 0\n",
+    "        current_state = np.reshape(game.reset(), [1, observation_size])\n",
+    "        for frame in range(FRAMES_PER_EPISODE):\n",
+    "            # game.render()\n",
+    "            action = npc.act(current_state)\n",
+    "            new_state, gained_reward, is_done, info = game.step(action)\n",
+    "            new_state = np.reshape(new_state, [1, observation_size])\n",
+    "            npc.retain(current_state, action, gained_reward, new_state, is_done)\n",
+    "            total_score += gained_reward\n",
+    "            current_state = new_state\n",
+    "            if len(npc.memory) > BATCH_SIZE:\n",
+    "                npc.replay(BATCH_SIZE)\n",
+    "            if is_done:\n",
+    "                break\n",
+    "        scores.append(total_score)\n",
+    "    npc.save(\"simple_dqn_\" + str(model) + \".h5\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for i, avg in enumerate(avgs):\n",
+    "    print(\"Model {} has avarage: {}\".format(i, avg))\n",
+    "print(\"Overall avg: {}\".format(sum(avgs) / len(avgs)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Wnioski\n",
+    "<p style='text-align: justify;'>\n",
+    "Liczbowe wyniki agenta z prostą siecią neuronową są znacznie gorsze od wyników agenta naiwnego. Po dogłębnej analizie\n",
+    "wydarzeń oraz zapisu wideo można zauważyć, że agent rzeczywiście początkowo skupia się na eksploracji otoczenia\n",
+    "uruchamiając silniki w przypadkowej kolejności. Niemniej jednak wraz z upływem kolejnych prób i zmniejszania się \n",
+    "współczynnika eksploracji, zaczyna podejmować najlepsze (według niego) decyzje, czyli po prostu opadać w dół. \n",
+    "Poniekąd jest to racjonalna decyzja, bo właśnie na tym polega Lunar Lander, jednake agent nie nauczył się zwracać \n",
+    "uwagi na te mniej oczywiste czynniki wspomagające sukcec, takie jak stabilizacja lotu czy nie zbaczanie z pionowej\n",
+    "trajektorii lotu.\n",
+    "</p>\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Wnioski\n",
+    "<p style='text-align: justify;'>\n",
+    "Wynika to z faktu, że kształt i parametry naszej sieci neuronowej nie są zbyt dobrze dobrane do zadania, przed\n",
+    "jakim została postawiona. Przede wszystkim funkcja aktywacji jako liniowa. \n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<center><img src=\"https://media.giphy.com/media/jtow1ffsCGqgbqvPkX/giphy.gif\" width=\"460\" height=\"280\" /></center>\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
