done simple agent

--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -425,7 +425,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Prosty agent DQN\n",
+    "## Agent DQN v1\n",
     "<p style='text-align: justify;'>\n",
     "Następnym krokiem było usprawnienie naiwnego agenta poprzez dodanie prostej sieci neuronowej oraz metod\n",
     "odpowiedzialnych za jej trenowanie. \n",
@@ -481,7 +481,6 @@
     "    def _init_model(self):\n",
     "        \"\"\"\n",
     "        Inicjalizuje model sieci neuronowej.\n",
-    "        Wybraliśmy (w naszym mniemaniu) najproszte parametry i kształt.\n",
     "        \"\"\"\n",
     "\n",
     "        self._model = Sequential()\n",
@@ -531,13 +530,34 @@
     "    def save(self, model_path):\n",
     "        \"\"\"Zapisuje modele do pamięci\"\"\"\n",
     "\n",
-    "        self._model.save_weights(model_path)\n"
+    "        self._model.save_weights(model_path)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> <p style='text-align: justify;'>\n",
+    "Sieć neuronowa zaimplementowana w metodzie <b>_init_model()</b> została stworzona jako proste odzwieciedlenie posiadanych\n",
+    "przez nas danych, czyli warstwa wejściowa ma ilość neuronów równą rozmiarowi danych wejściowych, a wyjściowa taki jak \n",
+    "ilość możliwych do podjęcia akcji. Parametry takie jak funkcja aktywacji czy straty na razie wybraliśmy losowo.\n",
+    "<br/>\n",
+    "Implementacja metody <b>replay(batch_size)</b> jest jedną z najprostszych powszechnie stosowanych w modelach DQN. \n",
+    "Wybiera małą próbkę danych (aby uniknąć znacznego spowolnienia całego procesu), a następnie dotrenowuje na niej model poprzez\n",
+    "próbę przewidzenia najlepszej decyzji dla następnego stanu i skojarzenia jej z obecnym stanem. Można sobie to\n",
+    "wyobrażać jako coraz dalsze i dalsze spoglądanie w przyszłość. Dzięki zastosowaniu podwójnie zakończonej kolejki\n",
+    "(deque) jako pamięci, zyskujemy duże prawdopodobieństwo na kilkukrotne dotrenowanie modelu na danym przypadku, a jednocześnie\n",
+    "uniknięcie przetrenowania. Dodatkowo po każdym wywołaniu tej metody obniżamy współczynnik eksploracji agenta, \n",
+    "czyli zmniejszamy szansę na wykonanie losowego ruchu.\n",
+    "</p>"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -548,7 +568,7 @@
     "NUM_OF_AGENTS = 4\n",
     "NUM_OF_EPISODES = 200\n",
     "FRAMES_PER_EPISODE = 1000\n",
-    "BATCH_SIZE = 16\n",
+    "BATCH_SIZE = 16              # Rozmiar próbki danych do dotrenowywania modelu\n",
     "GAME_ID = \"LunarLander-v2\""
    ],
    "metadata": {
@@ -610,9 +630,33 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> <p style='text-align: justify;'>\n",
+    "Zmiana kształtu zmiennych przechowujących stany wynika z implementacji kerasa. Żeby dane zostały poprawnie \n",
+    "zinterpretowane należy umieścić je w zagnieżdżonych listach.\n",
+    "</p>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model 0 has avarage: -136.8427404998284\n",
+      "Model 1 has avarage: -142.7302459281223\n",
+      "Model 2 has avarage: -137.1295521235213\n",
+      "Model 3 has avarage: -137.8901023058812\n",
+      "Overall avg: -138.6481602143383\n"
+     ]
+    }
+   ],
    "source": [
     "for i, avg in enumerate(avgs):\n",
     "    print(\"Model {} has avarage: {}\".format(i, avg))\n",
@@ -635,7 +679,7 @@
     "uruchamiając silniki w przypadkowej kolejności. Niemniej jednak wraz z upływem kolejnych prób i zmniejszania się \n",
     "współczynnika eksploracji, zaczyna podejmować najlepsze (według niego) decyzje, czyli po prostu opadać w dół. \n",
     "Poniekąd jest to racjonalna decyzja, bo właśnie na tym polega Lunar Lander, jednake agent nie nauczył się zwracać \n",
-    "uwagi na te mniej oczywiste czynniki wspomagające sukcec, takie jak stabilizacja lotu czy nie zbaczanie z pionowej\n",
+    "uwagi na te mniej oczywiste czynniki wspomagające sukcec, takie jak stabilizacja lotu czy niezbaczanie z pionowej\n",
     "trajektorii lotu.\n",
     "</p>\n"
    ],
@@ -646,10 +690,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Wnioski\n",
     "<p style='text-align: justify;'>\n",
-    "Wynika to z faktu, że kształt i parametry naszej sieci neuronowej nie są zbyt dobrze dobrane do zadania, przed\n",
-    "jakim została postawiona. Przede wszystkim funkcja aktywacji jako liniowa. \n"
+    "Wynika to z faktu, że kształt i parametry naszej sieci neuronowej nie są zbyt dobrze dobrane. Przede wszystkim \n",
+    "liniowa funkcja aktywacji dla obu warstw to marnowanie potencjału wynikającego ze stosowania sieci neuronowej. \n",
+    "Jeśli dana warstwa neuronów używa liniowej funkcji aktywacji do określenia pobudzenia poszczególnych neuronów, a \n",
+    "następnie przekazuje je jako impulsz do kolejnej warstwy pobudzanej liniowo, to na końcu nie otrzymujemy niczego innego \n",
+    "niż po prostu pewną funkcję liniową określoną na podstawie wartości wejść. To oznacza, że wszystkie znajdujące się\n",
+    "obok siebie warstwy z liniową funkcją aktywacji mogą po prostu zostać zamienione w jedną warstwę. Innym problemem funkcji\n",
+    "liniowej jest to, że w miarę dotrenowywania jej wartości na wyjściu mogą zmierzać do nieskończoności, aż w pewnym\n",
+    "momencie przepełnić stos i być interpretowane jako <i>NaN</i>.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -658,8 +707,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<center><img src=\"https://media.giphy.com/media/jtow1ffsCGqgbqvPkX/giphy.gif\" width=\"460\" height=\"280\" /></center>\n",
-    "\n"
+    "<p style='text-align: justify;'>\n",
+    "Drugim, poza funkcją straty, rzucającym się w oczy parametrem jest optymalizator. Użyliśmy algorytmu \n",
+    "stochastycznego spadku wzdłuż gradientu, który skupia się na określeniu tendencji optymalizowanej funkcji \n",
+    "biorąc pod uwagę jedynie położenie, w którym znajduje się w danym momenice. Jeśli zastanowimy się dłużej \n",
+    "nad tym, jaki efekt chcemy osiągnąć w modelu DQN, to dojdziemy do wniosku, że ważne jest dla nas skupianie \n",
+    "się nie na jednym, a na kilku krokach naprzód. \n",
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -668,31 +722,24 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Header"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "#### Header"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "##### Header\n"
+    "<center><img src=\"https://media.giphy.com/media/JtM8dLWsjSVWYnvMWT/giphy.gif\" width=\"460\" height=\"280\" /></center>\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Agent DQN v1\n",
+    "<p style='text-align: justify;'>\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
